@@ -1,3 +1,4 @@
+* Remove egenix-mx-base and replace it by python-dateutil
 * Add cache to safe_eval
 * Rename HttpDaemon into XMLRPCDaemon
 * Improve TranslateFactory to fetch all translations for a report in one query
